--- a/qtdesignerRaw.ui
+++ b/qtdesignerRaw.ui
@@ -132,7 +132,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap>sat3.png</pixmap>
+        <pixmap>imgs/sat3.png</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
