--- a/qtdesignerRaw.ui
+++ b/qtdesignerRaw.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1200</width>
-    <height>736</height>
+    <height>720</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -502,7 +502,7 @@
         </layout>
        </widget>
       </item>
-      <item row="3" column="0" colspan="2">
+      <item row="3" column="0">
        <widget class="QPushButton" name="pushButton">
         <property name="minimumSize">
          <size>
@@ -512,6 +512,13 @@
         </property>
         <property name="text">
          <string>Arm/Disarm</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="text">
+         <string>Chage HUD</string>
         </property>
        </widget>
       </item>
@@ -657,7 +664,7 @@
          <item row="3" column="1">
           <widget class="QLabel" name="rollrate">
            <property name="text">
-            <string>TextLabel</string>
+            <string>N/A</string>
            </property>
           </widget>
          </item>
@@ -678,7 +685,7 @@
          <item row="0" column="1">
           <widget class="QLabel" name="altitude">
            <property name="text">
-            <string>TextLabel</string>
+            <string>N/A</string>
            </property>
           </widget>
          </item>
@@ -719,7 +726,7 @@
          <item row="1" column="1">
           <widget class="QLabel" name="velocity">
            <property name="text">
-            <string>TextLabel</string>
+            <string>N/A</string>
            </property>
           </widget>
          </item>
@@ -733,7 +740,7 @@
          <item row="2" column="1">
           <widget class="QLabel" name="acceleration">
            <property name="text">
-            <string>TextLabel</string>
+            <string>N/A</string>
            </property>
           </widget>
          </item>
