--- a/qtdesignerRaw.ui
+++ b/qtdesignerRaw.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>RDT Ground Station</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>imgs/RDTLogo2.png</normaloff>imgs/RDTLogo2.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -79,6 +83,9 @@
           <width>360</width>
           <height>59</height>
          </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
         </property>
         <property name="title">
          <string>Module Status:</string>
@@ -518,7 +525,7 @@
       <item row="3" column="1">
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
-         <string>Chage HUD</string>
+         <string>Change HUD</string>
         </property>
        </widget>
       </item>
@@ -602,16 +609,6 @@
       <property name="sizeConstraint">
        <enum>QLayout::SetMinimumSize</enum>
       </property>
-      <item row="2" column="0">
-       <widget class="QWidget" name="orient3d" native="true">
-        <property name="minimumSize">
-         <size>
-          <width>400</width>
-          <height>500</height>
-         </size>
-        </property>
-       </widget>
-      </item>
       <item row="4" column="0">
        <widget class="QGroupBox" name="dataGroup">
         <property name="maximumSize">
@@ -620,8 +617,20 @@
           <height>16777215</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <family>Arial Rounded MT Bold</family>
+          <pointsize>13</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
         <property name="styleSheet">
-         <string notr="true">font: 10pt &quot;Arial Rounded MT Bold&quot;;</string>
+         <string notr="true">font: 12.5pt &quot;Arial Rounded MT Bold&quot;;</string>
         </property>
         <property name="title">
          <string>Data:</string>
@@ -761,6 +770,16 @@
         </layout>
        </widget>
       </item>
+      <item row="2" column="0">
+       <widget class="QWidget" name="orient3d" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>400</width>
+          <height>500</height>
+         </size>
+        </property>
+       </widget>
+      </item>
       <item row="3" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
@@ -778,6 +797,7 @@
     </item>
    </layout>
   </widget>
+  <widget class="QStatusBar" name="statusbar"/>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -804,35 +824,15 @@
       <string>Choose Files:</string>
      </property>
      <addaction name="actionData"/>
-     <addaction name="actionModule_Status"/>
      <addaction name="actionAvionics"/>
      <addaction name="actionTelemetry"/>
      <addaction name="actionTracking"/>
     </widget>
     <addaction name="menuChoose_File"/>
    </widget>
-   <widget class="QMenu" name="menuDisplay_Settings">
-    <property name="title">
-     <string>Display</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menuTelemetry">
-    <property name="title">
-     <string>Telemetry</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menuCOnfig">
-    <property name="title">
-     <string>Config</string>
-    </property>
-   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
-   <addaction name="menuDisplay_Settings"/>
-   <addaction name="menuTelemetry"/>
-   <addaction name="menuCOnfig"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
   <action name="actionData">
    <property name="text">
     <string>Data</string>
