--- a/rdtGsRaw.ui
+++ b/rdtGsRaw.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
+    <width>1210</width>
     <height>750</height>
    </rect>
   </property>
@@ -72,7 +72,7 @@
        <enum>QLayout::SetMinimumSize</enum>
       </property>
       <item row="3" column="1">
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="hudBut">
         <property name="text">
          <string>Change HUD</string>
         </property>
@@ -317,7 +317,7 @@
        </widget>
       </item>
       <item row="3" column="0">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="armBut">
         <property name="minimumSize">
          <size>
           <width>75</width>
@@ -325,7 +325,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Arm/Disarm</string>
+         <string>Arm</string>
         </property>
        </widget>
       </item>
@@ -804,7 +804,7 @@
          </size>
         </property>
         <property name="styleSheet">
-         <string notr="true">border-color: rgb(0, 0, 0);</string>
+         <string notr="true"/>
         </property>
        </widget>
       </item>
@@ -851,7 +851,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1200</width>
+     <width>1210</width>
      <height>21</height>
     </rect>
    </property>
